    quality should be considered deprecated.
  * install.sh now installs the user manual as well
  * (not quite a new documentable feature, but worth considering in
    the light of the new SB-EXT:MUFFLE-CONDITIONS declaration): the
    beginnings of a semantically meaningful condition hierarchy is
    under development, for use in SB-EXT:MUFFLE-CONDITIONS and by
    IDEs.
  * fixed bug: Displaced arrays whose displaced-to array has become
    too small now cause ARRAY-DIMENSION to signal an error, providing
    for safer bounds-checking. (reported by Bruno Haible)
  * fixed bug: DEFCLASS slot definitions with identical :READER and
    :WRITER names now signal a reasonable error. (reported by Thomas
    Burdick)
  * fixed bug: CLOSE :ABORT T on appending stream no longer causes
    file deletion.
  * fixed bug: Invalid slot specification errors now print correctly. 
    (thanks to Zach Beane)
  * fixed bug 320: Shared to local slot value transfers in class 
    redefinitions now happen corrently from superclasses as
    well. (reported by Bruno Haible)
  * fixed bug 316: SHIFTF now accepts VALUES forms. (reported by Bruno
    Haible)
  * fixed bug 322: DEFSTRUCT :TYPE LIST type predicates now handle
    improper lists correctly. (reported by Bruno Haible)
  * fixed bug 313: source-transform for <fun-name> was erroneously
    applied to a call of a value of a variable with name <fun-name>.
    (reported by Antonio Menezes Leitao)
  * fixed bug 307: The obsolete instance protocol ensures that
    subclasses are properly obsoleted.  (thanks to Nikodemus Siivola)
  * fixed bug 298, revealed by Paul F. Dietz' test suite: SBCL can
    remove dead unknown-values globs from the middle of the stack.
  * added a new restart to *BREAK-ON-SIGNALS* handling to make it
    easier to resume long computations after using *BREAK-ON-SIGNALS*
    to diagnose and fix failures.  (thanks to Nikodemus Siivola)
  * fixed bug reported by PFD in lisppaste #747 (and Bruno Haible from